# ImHex-Plugin-Pcap

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: plugin_pcap.hpp
source/: plugin_pcap.cpp
